# DataScienceResearch

./: .gitignore  README.md  methodology.md  pyproject.toml
configs/: 011_provider_ingestion_config.example.json  013_statsbomb_credentials.env.example
experiments/: 001_data_contract_inventory.py  002_role_eligibility_stable_metric_population.py  003_feature_engineering_normalization.py  004_role_specific_weight_estimation.py  005_scientific_validation_calibration.py  006_temporal_cross_competition_validation.py  007_production_score_engine_framework.py  008_full_population_recalibration.py  009_full_data_reload_orchestration.py  010_dataplatform_statsbomb_reload.py  011_provider_statsbomb_ingestion.py  012_licensed_provider_backfill.py  014_event_derived_fallback_feasibility.py  015_event_derived_research_scouting_score.py
notebooks/: 001_data_contract_inventory.ipynb  002_role_eligibility_stable_metric_population.ipynb  003_feature_engineering_normalization.ipynb  004_role_specific_weight_estimation.ipynb  005_scientific_validation_calibration.ipynb  006_temporal_cross_competition_validation.ipynb  007_production_score_engine_framework.ipynb  008_full_population_recalibration.ipynb  009_full_data_reload_orchestration.ipynb  010_dataplatform_statsbomb_reload.ipynb  011_provider_statsbomb_ingestion.ipynb  012_licensed_provider_backfill.ipynb  013_secure_credentials_activation.ipynb  014_event_derived_fallback_feasibility.ipynb  015_event_derived_research_scouting_score.ipynb
scripts/: check_statsbomb_credentials.py  run_licensed_backfill_safe.sh
(+324 files in other folders)
