[project]
name = "football-score-engine-research"
version = "0.1.0"
description = "Reproducible research framework for role-specific football composite score engines."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "nbformat>=5.10",
  "joblib>=1.3",
  "requests>=2.34.2",
]

[tool.uv]
package = false
